Version 0.10.0

	* Add RemoteAPI#components_for_project_with_key (thanks @rjharmon)

Version 0.9.2

	* Remove unneeded httpclient dependency

Version 0.9.1

	* Fix a typo in the deprecation warning

Version 0.9.0

	* Deprecate RemoteAPI#get_projects_without_schemes in favour of #projects
	* Properly deprecate #get_ methods
	* Add RemoteAPI#progress_workflow_action (thanks Lucas Jourdes)
	* Add RemoteAPI#available_action (thanks Lucas Jourdes)
	* Add extra documentation about updating fields (thanks Vincent Beau)

	* Various small documentation updates and tweaks

Version 0.8.6

	* Add extra documentation about updating cascading fields (thanks Lucas Jourdes)

Version 0.8.5

	* Add missing alias for a predicate attribute (IssueProperty#sub_task?)

Version 0.8.4

	* Fix indentation of example code in documentation

Version 0.8.3

	* Fix a documentation link

Version 0.8.2

	* Added Issue#custom_field for getting custom field values
	* Added a file of examples, ported from jira4r
	* Add setters to attribute aliases
	* Added a forgotten deprecation
	* Updated ChangeLog with changes from 0.8.1
	* Updated ChangeLog with changes from 0.8.0 (sorry!)

Version 0.8.1

	* Updated README and GettingStarted guide

Version 0.8.0

	* Deprecated the #get_ from methods that start with #get_
	* Alias #login to #log_in and #logout to #log_out
	* Added RemoteAPI#permission_to_edit_comment?
	* Added UserGroup and related RemoteAPI methods
	* Added RemoteAPI#add_worklog (thanks @FDj)
	* Added ability to initialize JIRA::FieldValue without an array (thanks @knut)

	* Various documentation updates and tweaks

	* Removed handsoap parsing abstraction (roflscale for parsing)
	* Removed the YARD plugin in favour of YARD 0.7 DSL documenting stuff

	* Fix setting the assignee during Issue creation (thanks @ssmiech)

Version 0.7.1

	* Remove AOT compiled files from gem

Version 0.7

	* Added YARD extension for documentation
	* Removed URL class in favour of directly using underlying objects